--- a/Back-end/.editorconfig
+++ b/Back-end/.editorconfig
@@ -1,8 +1,10 @@
-root = true
+# Cấu Hình Các File theo một định dạng trước
 
-[*]
-charset = utf-8
-max_line_length = 0
-indent_size = 2
-trim_trailing_whitespace = true
-end_of_line = lf
+root = true # Chỉ Định Đây là File editorconfig gốc
+
+[*] #Khai báo phạm vi áp dụng 
+charset = utf-8 #Các file code lưu định dạng (encoding) nào
+max_line_length = 0 #Số kí tự tối đa trên mỗi dòng
+indent_size = 2 #Thụt lề vào bao nhiêu spaces
+trim_trailing_whitespace = true #Loại bỏ các space dư thừa ở cuối dòng
+end_of_line = lf #Kí tự xuống dòng là gì
